[tool.poetry]
name = "seclook"
version = "0.6.1"
description = "Simple security lookups via CLI"
authors = ["ackatz <andrew@akatz.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ackatz/seclook"

[tool.poetry.scripts]
seclook = "seclook.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"
configparser = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
