[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "ackatz", email = "andrew@akatz.org"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "click<9.0.0,>=8.1.7",
    "requests<3.0.0,>=2.31.0",
    "configparser<7.0.0,>=6.0.0",
]
name = "seclook"
version = "0.8"
description = "Simple security lookups via CLI"
readme = "README.md"

[project.urls]
homepage = "https://github.com/ackatz/seclook-cli"

[project.scripts]
seclook = "seclook.cli:main"

[project.optional-dependencies]
dev = [
    "pytest<8.0.0,>=7.4.2",
    "pre-commit<4.0.0,>=3.5.0",
]